[gd_scene load_steps=2 format=3 uid="uid://d2lq0kftu4x0j"]

[ext_resource type="Script" path="res://addons/dialoguecreator/Scripts/Nodes/DCStartNode.gd" id="1_4ldjq"]

[node name="StartNode" type="GraphNode"]
offset_right = 280.0
offset_bottom = 121.0
resizable = true
title = "Start"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_4ldjq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="IDLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start ID: "

[node name="StartIDSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 2e+07
rounded = true
allow_greater = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "Name: "

[node name="StartNameLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/StartIDSpinBox" to="." method="_on_start_spin_box_value_changed"]
